2002-12-24  James Henstridge  <james@daa.com.au>

	* jhbuild.py (do_build): change the code that removes entries from
	the module list so that it doesn't cause an exception if you
	specify a module name that won't be built.

2002-12-23  James Henstridge  <james@daa.com.au>

	* bootstrap.py (bootstraps): add my libtool -export-dynamic patch.

2002-12-23    <chema@celorio.com>

	* moduleinfo.py (gnome22): add intltool dependency to
	libgnomeprint

2002-12-22  Murray Cumming  <murrayc@usa.net>

	* moduleinfo.py (gnome22): Made gnome-desktop dependent on 
	gnome-themes because it is part of the Desktop release.

2002-12-22  Murray CUmming  <murrayc@usa.net>

	* moduleinfo.py (gnome22): Added gnome-themes module, because
	the Theme control panel complains at runtime about it not being 
	installed.

2002-12-20  Daniel Elstner  <daniel.elstner@gmx.net>

	* moduleinfo.py (gnome20): Add accessibility modules at-spi,
	libgail-gnome, at-poke, gnome-mag, gok, gnome-speech, gnopernicus,
	plus the MetaModule meta-gnome-accessibility.
	(gnome22): Override modules at-spi, libgail-gnome, gnome-mag to
	check out the HEAD branch.

2002-12-19  Biswapesh Chattopadhyay <biswapesh_chatterjee@tcscal.co.in>
	* jhbuild.py: Move True/False definitions up - fixes undefined
	errors for Python version < 2.2.1

2002-12-19  Murray Cumming  <murrayc@usa.net>

	* moduleinfo.py: Commented out the metatheme module because the
	release team think it probably isn't useful anymore, and because its
	Desktop Theme capplet is confusingly similar to the new 2.2 Theme 
	capplet.

2002-12-17  James Henstridge  <james@daa.com.au>

	* jhbuild.py: define True and False if they aren't defined in
	__builtins__.  This gets it to work with slightly older Pythons
	(still need to decide whether to replace the other stuff using new
	features).

2002-12-16  James Henstridge  <james@daa.com.au>

	* cvs.py (CVSRoot._login): take a pointer to the buildscript, and
	use it to execute the cvs login command.
