@@ -1,5 +1,12 @@
 2002-12-24  James Henstridge  <james@daa.com.au>
 
+	* moduleinfo.py (gnome22.fcpackage): add fcpackage to gnome22
+	module set.
+	(gnome22.pango): depend on fcpackage.
+
+	* module.py (FcPackage): add a special Package subclass for
+	building fcpackage.
+
 	* jhbuild.py (do_build): change the code that removes entries from
 	the module list so that it doesn't cause an exception if you
 	specify a module name that won't be built.
